# serializer version: 1
# name: TestHatariGenerator.test_generate
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate[config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = FALSE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_bios[auto-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[auto-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[de-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512de.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[es-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512es.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[fr-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512fr.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[it-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512it.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[nl-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512nl.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[ru-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512ru.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[se-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512se.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[uk-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512uk.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-1040ste_106-tos106]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos106us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-1040ste_162-tos162]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/tos162us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-1040ste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-1040ste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'ste',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-520st_100-tos100]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos100us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-520st_102-tos102]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos102us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-520st_104-tos104]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/tos104us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-520st_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-520st_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-None-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-falcon_400-tos400]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos400us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-falcon_402-tos402]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos402us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-falcon_404-tos404]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/tos404us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-falcon_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-falcon_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'falcon',
      '--tos',
      '/userdata/bios/etos512us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-megaste_205-tos205]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos205us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-megaste_206-tos206]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/tos206us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-megaste_auto-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-megaste_etos256-etos256]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'megaste',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-tt_306-tos306]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/tos306us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-tt_auto-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_bios[us-tt_etos512-etos512]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'tt',
      '--tos',
      '/userdata/bios/etos512us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_config[{'ram': '1'}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '1',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_config[{'ram': '1'}][config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = FALSE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_config[{'showFPS': '0'}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_config[{'showFPS': '0'}][config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = FALSE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_config[{'showFPS': '1'}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_config[{'showFPS': '1'}][config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = TRUE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_controllers
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_controllers[config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Joystick2]
  nJoyId = 1
  nJoystickMode = 1
  nButton1 = 0
  nButton2 = 1
  nButton3 = 2
  
  [Joystick3]
  nJoyId = 2
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Joystick4]
  nJoyId = 3
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Joystick5]
  nJoyId = 4
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = FALSE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_existing
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--disk-a',
      '/userdata/roms/atarist/rom.st',
      '--drive-b',
      'off',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_existing[config]
  '''
  [Joystick1]
  nJoyId = 0
  nJoystickMode = 1
  nButton1 = 3
  nButton2 = 1
  nButton3 = 0
  
  [Log]
  bConfirmQuit = FALSE
  
  [Screen]
  bShowStatusbar = FALSE
  
  [Foo]
  bBar = FALSE
  
  
  '''
# ---
# name: TestHatariGenerator.test_generate_gemdos_rom
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--harddrive',
      '/userdata/roms/atarist/rom.gemdos',
      '/userdata/system/configs/hatari/blank.st',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_gemdos_rom_existing_blank
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--harddrive',
      '/userdata/roms/atarist/rom.gemdos',
      '/userdata/system/configs/hatari/blank.st',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_hd_rom[{'hatari_drive': 'ACSI'}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--acsi',
      '/userdata/roms/atarist/rom.hd',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_hd_rom[{'hatari_drive': 'IDE'}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--ide-master',
      '/userdata/roms/atarist/rom.hd',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_generate_hd_rom[{}]
  tuple(
    list([
      'hatari',
      '--fullscreen',
      '--machine',
      'st',
      '--tos',
      '/userdata/bios/etos256us.img',
      '--memsize',
      '0',
      '--ide-master',
      '/userdata/roms/atarist/rom.hd',
    ]),
    dict({
    }),
  )
# ---
# name: TestHatariGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'hatari',
  })
# ---
